changed option for sirst question

--- a/quiz.html
+++ b/quiz.html
@@ -46,10 +46,10 @@ cursor: pointer;
 			<form name="quizform" onsubmit="return submitanswer()" method="post">
 				<div class="f4">
 				<h3>1.captial of india</h3>
-				<input type="radio" value="a" name="q1" id="q1a">a.delhi<br>
-				<input type="radio" value="b" name="q1" id="q1b">b.tamilnadu<br>
-				<input type="radio" value="c" name="q1" id="q1c">c.kerala<br>
-				<input type="radio" value="d" name="q1" id="q1d">d.goa
+				<input type="radio" value="a" name="q1" id="q1a">a.Delhi<br>
+				<input type="radio" value="b" name="q1" id="q1b">b.Tamilnadu<br>
+				<input type="radio" value="c" name="q1" id="q1c">c.Kerala<br>
+				<input type="radio" value="d" name="q1" id="q1d">d.Mumbai
 				<br>
 				<h3>2.color of banana</h3>
 				<input type="radio" value="a"  name="q2" id="q2a">a.yellow<br>
